# lvra

./: .gitignore  CLAUDE.md  README.md  lvra_env.yml  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml
bash/: bigbashboy.sh  kafka.sh  kafka_dev.sh  r0b_annotator.sh  r0b_annotator_dev.sh  r0b_feature_maker.sh  r0b_feature_maker_dev.sh  r0b_predict.sh  r0b_predict_dev.sh  rb_annotator.sh  rb_feature_maker.sh
data/: log_schema.sql  public_settings.yaml  public_settings_ci.yaml  public_settings_local.yaml  r0b_config.yaml  r0b_config_LOCALTEST.yaml
data/test/: 20260202_102448.csv  20260202_102448.json  20260205_073301.json  test.csv  test.json  test2.csv  test_bad.csv  tns_example.json
docs/: test_review.md
docs/science_notes/: first_data_and_training_loops.md  lvra_local.md
lvra/: features.py  kafka_consumer.py
lvra/pypeline/: annotate.py  kafka_consumer.py  r0b_annotator.py  r0b_feature_maker.py  r0b_predict.py  rb_feature_maker.py
lvra/training/: labeling.py  learning_utils.py  make_pool.py  mlflow_utils.py  sampling.py
lvra/utils/: __init__.py  features.py  misc.py  predict.py  tns.py
test/: conftest.py  helpers.py  test_features.py  test_kafka_consumer.py  test_production_flow_integration.py  test_pypeline_r0bannotator.py  test_pypeline_r0bfeatures.py  test_pypeline_r0bpredict.py  test_training_labeling.py  test_training_learning_utils.py  test_training_makepool.py  test_training_mlflow_utils.py  test_training_sampling.py  test_utilsfeatures.py  test_utilsmisc.py  test_utilspredict.py  test_utilstns.py
vra/: kafka_consumer.py
